# signal-streamlit

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  signals.py
app/pages/: 1_file.py
static/: signals.json  template.csv
